# backend/src/membership/membership.controller.ts
@@ -1,0 +1,34 @@
+import { Body, Controller, Delete, Get, Param, Patch, Post } from '@nestjs/common';
+import { CreateMembershipDto } from './dto/create-membership.dto';
+import { UpdateMembershipDto } from './dto/update-membership.dto';
+import { MembershipService } from './membership.service';
+
+@Controller('membership')
+export class MembershipController {
+  constructor(private readonly membershipService: MembershipService) {}
+
+  @Post()
+  create(@Body() createMembershipDto: CreateMembershipDto) {
+    return this.membershipService.create(createMembershipDto);
+  }
+
+  @Get()
+  findAll() {
+    return this.membershipService.findAll();
+  }
+
+  @Get(':id')
+  findOne(@Param('id') id: string) {
+    return this.membershipService.findOne(+id);
+  }
+
+  @Patch(':id')
+  update(@Param('id') id: string, @Body() updateMembershipDto: UpdateMembershipDto) {
+    return this.membershipService.update(+id, updateMembershipDto);
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.membershipService.remove(+id);
+  }
+}
